crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__attached_stub_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
expression: frame
---
"KIT / ATTACHED  trenchwire · codex·eng · fix red CI                    PTY 1.0.1"
"                                                                                "
"┌ attach ──────────────────────────────────────────────────────────────────────┐"
"│PTY attach ships in 1.0.1                                                     │"
"│                                                                              │"
"│Esc detaches without killing the run.                                         │"
"│q is disabled while attached.                                                 │"
"│                                                                              │"
"│PTY not connected yet — Esc detaches                                          │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [esc] detach (without kill)                                                    "
