crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__board_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
expression: frame
---
"KIT / BOARD  · enter open · r retry                              2 open  3 total"
"┌ queue ───────────────────────────────────────────────────────────────────────┐"
"│#        TASK                          REPO           ROLE         STATE      │"
"│▶ 1      port guard.js                 kit            codex·eng    OPEN       │"
"│  2      frame clock                   kit            grok·design  OPEN       │"
"│  3      fix red CI                    trenchwire     codex·eng    DONE       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [esc] back  [n]ew  [enter] dispatch  [space] done  [x] remove                  "
