crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__control_room_keeps_the_selected_row_in_view.snap
---
source: crates/kit-tui/src/ui/mod.rs
assertion_line: 390
expression: frame
---
"KIT / CONTROL ROOM                  [ALL]  8 RUNNING  8 QUEUED  0 GATING  0 FAIL"
"[1] Frontend  [2] Backend  [3] Security  [4] Product                            "
"┌ runs ────────────────────────────────────────────────────────────────────────┐"
"│REPO           AGENT        TASK                    STATE        GATE         │"
"│  kit          codex·eng    task 09                 QUEUED       --           │"
"│  kit          codex·eng    task 10                 QUEUED       --           │"
"│  kit          codex·eng    task 11                 QUEUED       --           │"
"│  kit          codex·eng    task 12                 QUEUED       --           │"
"│  kit          codex·eng    task 13                 QUEUED       --           │"
"│  kit          codex·eng    task 14                 QUEUED       --           │"
"│▶ kit          codex·eng    task 15                 QUEUED       --           │"
"│  ↑ 9 more above                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [↑↓] select  [d]ispatch  [c]agents  [b]oard  [g]ate  [k]ill  [r]etry  [?]help  "
