crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__dispatch_personas_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
expression: frame
---
"KIT / DISPATCH                                                         fan-out 3"
"┌ repos (space) ───┐┌ agents (space) ────────────┐┌ personas (space) ──────────┐"
"│  [x] kit         ││  [x] ✻  claude             ││▶ [x] eng                   │"
"│                  ││  [ ] >_ codex              ││  [x] product               │"
"│                  ││  [ ] ⊘  grok    needs KIT_…││  [x] design                │"
"│                  ││  [ ] ◉  ollama             ││  [ ] qa                    │"
"│                  ││                            ││                            │"
"│                  ││                            ││                            │"
"│                  ││                            ││                            │"
"│                  ││                            ││                            │"
"│                  ││                            ││                            │"
"└──────────────────┘└────────────────────────────┘└────────────────────────────┘"
"┌ task ────────────────────────────────────────────────────────────────────────┐"
"│empty room first paint                                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [esc] back  [tab] field  [↑↓] move  [space] toggle  [enter] submit             "
