crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__dispatch_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
assertion_line: 1194
expression: frame
---
"KIT / DISPATCH  · enter open · r retry                                 fan-out 1"
"┌ repos (space) ─────┐┌ agents (space) ───────────┐┌ roles (space) ────────────┐"
"│▶ [x] kit-tui · this││  [x] ✻  claude            ││  [x] frontend             │"
"│                    ││  [ ] >_ codex             ││  [ ] backend              │"
"│                    ││  [ ] ⊘  grok    needs KIT…││  [ ] security             │"
"│                    ││  [ ] ◉  ollama            ││  [ ] product              │"
"│                    ││                           ││                           │"
"│                    ││                           ││                           │"
"│                    ││                           ││                           │"
"│                    ││                           ││                           │"
"│                    ││                           ││                           │"
"└────────────────────┘└───────────────────────────┘└───────────────────────────┘"
"┌ task ────────────────────────────────────────────────────────────────────────┐"
"│port guard.js across the monorepo                                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [esc] back  [tab] field  [↑↓] move  [space] toggle  [enter] submit             "
