crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__dispatch_with_probe_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
expression: frame
---
"KIT / DISPATCH                                                         fan-out 1"
"┌ repos (space) ───┐┌ agents (space) ────────────┐┌ personas (space) ──────────┐"
"│▶ [x] kit         ││  [x] ✻  claude  ready      ││  [x] eng                   │"
"│  [ ] guardian    ││  [ ] >_ codex   missing    ││  [ ] product               │"
"│                  ││  [ ] ⊘  grok    needs KIT_…││  [ ] design                │"
"│                  ││  [ ] ◉  ollama  missing    ││  [ ] qa                    │"
"│                  ││                            ││                            │"
"│                  ││                            ││                            │"
"│                  ││                            ││                            │"
"│                  ││                            ││                            │"
"│                  ││                            ││                            │"
"└──────────────────┘└────────────────────────────┘└────────────────────────────┘"
"┌ task ────────────────────────────────────────────────────────────────────────┐"
"│port guard.js across the monorepo                                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [esc] back  [tab] field  [↑↓] move  [space] toggle  [enter] submit             "
