crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__empty_board_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
expression: frame
---
"KIT / BOARD                                                      0 open  0 total"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                Nothing queued                                │"
"│     press n to add  ·  Enter prefills Dispatch  ·  not a live pull-queue     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [esc] back  [n]ew  [enter] dispatch  [space] done  [x] remove  prefill-only 1.0"
