crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__empty_control_room_fox_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
assertion_line: 257
expression: frame
---
"KIT / CONTROL ROOM                                                [ALL]  0 RUNNING  0 GATING  0 FAIL"
"[1] Frontend  [2] Backend  [3] Security  [4] Product                                                "
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                           █▄       ▄█                                            │"
"│                                           ███▄   ▄███                                            │"
"│                                           ███████████                                            │"
"│                                          ▄███████████▄                                           │"
"│                                        ▄███████████████▄                                         │"
"│                                         ▀▀███████████▀▀                                          │"
"│                                            █████████▄▄▄▄                                         │"
"│                                          ▄███▀████▀█████                                         │"
"│                                         ██████▄▀▀▄███████                                        │"
"│                                         █████████████████                                        │"
"│                                         ▀███████████████                                         │"
"│                                           ▀▀█████████▀▀                                          │"
"│                                                                                                  │"
"│                                            No runs yet                                           │"
"│            press 1–4 to choose a role  ·  d dispatch  ·  ? help  ·  or try kit --demo            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [↑↓] select  [d]ispatch  [c]agents  [b]oard  [enter] open  [g]ate  [k]ill  [r]etry  [?]help        "
