crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__empty_control_room_probe_all_missing_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
assertion_line: 234
expression: frame
---
"KIT / CONTROL ROOM                 claude·codex·grok·ollama missing — kit doctor"
"[1] Frontend  [2] Backend  [3] Security  [4] Product                            "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                           No coding agents on PATH                           │"
"│      install claude, codex or grok  ·  kit doctor  ·  or try kit --demo      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [↑↓] select  [d]ispatch  [c]agents  [b]oard  [g]ate  [k]ill  [r]etry  [?]help  "
