crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__empty_control_room_probe_ready_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
assertion_line: 242
expression: frame
---
"KIT / CONTROL ROOM                                codex ready  ·  claude missing"
"[1] Frontend  [2] Backend  [3] Security  [4] Product                            "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                  No runs yet                                 │"
"│  press 1–4 to choose a role  ·  d dispatch  ·  ? help  ·  or try kit --demo  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [↑↓] select  [d]ispatch  [c]agents  [b]oard  [g]ate  [k]ill  [r]etry  [?]help  "
