crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__empty_control_room_snapshot_narrow.snap
---
source: crates/kit-tui/src/ui/mod.rs
expression: frame
---
"       need 60×12 — maximize this terminal (now 60×8)       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
